** Fix `Stack overflow' errors seen when building on some platforms
** Fix bug when `scm_with_guile ()' was called several times from the
   same thread
** The handler of SRFI-34 `with-exception-handler' is now invoked in the
   dynamic environment of the call to `raise'
** Fix potential deadlock in `make-struct'
** Fix compilation problem with libltdl from Libtool 2.2.x


Changes in 1.8.5 (since 1.8.4)

* Infrastructure changes

** Guile repository switched from CVS to Git

The new repository can be accessed using
"git-clone git://git.sv.gnu.org/guile.git", or can be browsed on-line at
http://git.sv.gnu.org/gitweb/?p=guile.git .  See `README' for details.

** Add support for `pkg-config'

See "Autoconf Support" in the manual for details.

* New modules (see the manual for details)

** `(srfi srfi-88)'

* New features (see the manual for details)

** New `postfix' read option, for SRFI-88 keyword syntax
** Some I/O primitives have been inlined, which improves I/O performance
** New object-based traps infrastructure

This is a GOOPS-based infrastructure that builds on Guile's low-level
evaluator trap calls and facilitates the development of debugging
features like single-stepping, breakpoints, tracing and profiling.
See the `Traps' node of the manual for details.

** New support for working on Guile code from within Emacs

Guile now incorporates the `GDS' library (previously distributed
separately) for working on Guile code from within Emacs.  See the
`Using Guile In Emacs' node of the manual for details.
 
* Bugs fixed

** `scm_add_slot ()' no longer segfaults (fixes bug #22369)
** Fixed `(ice-9 match)' for patterns like `((_ ...) ...)'

Previously, expressions like `(match '((foo) (bar)) (((_ ...) ...) #t))'
would trigger an unbound variable error for `match:andmap'.

** `(oop goops describe)' now properly provides the `describe' feature
** Fixed `args-fold' from `(srfi srfi-37)'

Previously, parsing short option names of argument-less options would